--- a/component/re-usabelComponent/search/button/index.scss
+++ b/component/re-usabelComponent/search/button/index.scss
@@ -1,12 +1,13 @@
 .see_button {
     .btn {
         margin-top: 50px;
-        background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
+        background: linear-gradient(93.15deg, rgb(199, 83, 154) -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
         width: 809px;
         height: 49px;
         border-radius: 12px;
         border: none;
         font-weight: 600;
+        box-shadow: rgb(199, 83, 154) 0px 25px 20px -20px;
         margin-bottom: 20px;
         &:hover {
             font-size: 14px;
