--- a/component/re-usabelComponent/search/dropDown/index.scss
+++ b/component/re-usabelComponent/search/dropDown/index.scss
@@ -1,4 +1,5 @@
 .Drop {
+    cursor: pointer;
     p {
         margin: 0;
         font-size: 12px;
@@ -9,14 +10,8 @@
     }
 }
 .filter {
-    padding-left: 10px;
     p {
-        margin: 0;
         font-size: 15px;
-        color: #4f4f4f;
         font-weight: 500;
-        span {
-            padding: 5px;
-        }
     }
 }
