changes in search-ui

--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -487,6 +487,9 @@
     // padding-left: 20px;
     // background: #fbfbfb;
     // }
+    .widdeContainer {
+        max-width: 1558px !important;
+    }
     .container {
         margin: 0 auto;
         max-width: 1158px;
