--- a/component/nestedComponent/dashBoard/searchbar/index.scss
+++ b/component/nestedComponent/dashBoard/searchbar/index.scss
@@ -47,6 +47,9 @@
     //     width: 40px;
     // }
 }
+.hidethis {
+    display: none;
+}
 @media screen and (max-width: 1671px) {
     .searchBarHomeDashboard {
         display: none;
