--- a/component/nestedComponent/search/autoComplete/index.scss
+++ b/component/nestedComponent/search/autoComplete/index.scss
@@ -7,6 +7,7 @@
     .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
         border-color: red !important;
         box-shadow: unset;
+        z-index: 1050;
     }
     .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
         border-color: red;
@@ -43,4 +44,19 @@
         background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+}
+.hide {
+    display: none;
+}
+.show {
+    display: block !important;
+    height: 100%;
+    width: 100%;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.39);
+    backdrop-filter: blur(10px);
 }
