--- a/component/re-usabelComponent/search/vedioCard/index.scss
+++ b/component/re-usabelComponent/search/vedioCard/index.scss
@@ -11,7 +11,7 @@
         display: flex;
         align-items: center;
         .image {
-            border: 3px solid #bfbfbf;
+            // border: 3px solid #bfbfbf;
             border-radius: 10px;
             padding: 5px;
             display: flex;
