--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -8,7 +8,6 @@
 @import "../home/trending/trendingButton";
 @import "../friendsList/emptyData";
 @import "../trending/trendingPost";
-@import "../profile";
 @import "../searchBar";
 @import "../search/card";
 @import "../search/button";
@@ -19,3 +18,5 @@
 @import "../search/vedioCard";
 @import "../search/groupCard";
 @import "../common/spinner";
+@import "../common/avatar";
+@import "../profile";
