--- a/component/nestedComponent/home/homePost/index.scss
+++ b/component/nestedComponent/home/homePost/index.scss
@@ -9,54 +9,42 @@
     // height: 504px;
     // width: 100px;
     // height: 100px;
-    .profile-main {
-        display: flex;
-        // width: 90%;
-        // max-width: 580px;
-        max-height: 60px;
-        justify-content: space-between;
-        // justify-content: center;
-        align-items: center;
-        padding-right: 22px;
-        // margin-bottom: 10px;
-        .profile-image {
-            display: flex;
-            .post-profile {
-                max-width: 45px;
-                max-height: 45px;
-                border: 3px solid #bfbfbf;
-                border-radius: 10px;
-                margin: 0px 10px;
-                display: flex;
-                justify-content: center;
-            }
-            .post-profile-color {
-                max-width: 45px;
-                max-height: 45px;
-                border: 3px solid #fe5e71;
+    // .profile-main {
+    //     display: flex;
+    //     // width: 90%;
+    //     // max-width: 580px;
+    //     max-height: 60px;
+    //     justify-content: space-between;
+    //     // justify-content: center;
+    //     align-items: center;
+    //     padding-right: 22px;
+    //     // margin-bottom: 10px;
+    //     .profile-image {
+    //         display: flex;
 
-                border-radius: 10px;
-                margin: 0px 10px;
-                display: flex;
-                justify-content: center;
-            }
-            .name {
-                display: flex;
-                justify-content: center;
-                // align-items: center;
-                flex-direction: column;
-                p {
-                    color: #bfbfbf;
-                    font-weight: 400;
-                    font-size: 12px;
-                }
-            }
-        }
-        .dot {
-            max-width: 30px;
-            max-height: 30px;
-        }
-    }
+    //         .name {
+    //             display: flex;
+    //             justify-content: center;
+    //             align-items: center;
+    //             // flex-direction: column;
+    //             .user_name {
+    //                 color: #1e293b;
+    //                 font-weight: 600;
+    //                 font-size: 14px;
+    //             }
+    //             p {
+    //                 color: #bfbfbf;
+    //                 font-weight: 400;
+    //                 font-size: 12px;
+    //                 margin: 0;
+    //             }
+    //         }
+    //     }
+    //     .dot {
+    //         max-width: 30px;
+    //         max-height: 30px;
+    //     }
+    // }
     .post {
         margin-top: 30px;
         img {
