--- a/component/nestedComponent/home/storySlider/homeStories/index.scss
+++ b/component/nestedComponent/home/storySlider/homeStories/index.scss
@@ -27,7 +27,7 @@
         width: 45px;
         height: 45px;
         top: 12px;
-        left: 12px;
+        left: 10px;
     }
     .name {
         p {
@@ -40,7 +40,7 @@
             font-size: 10px;
             line-height: 16px;
             font-weight: 600;
-
+            text-shadow: 2px 2px 8px black;
             line-height: 11px;
         }
     }
