--- a/component/nestedComponent/home/storySlider/storyProfile/index.scss
+++ b/component/nestedComponent/home/storySlider/storyProfile/index.scss
@@ -2,28 +2,9 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 20px;
     .story_profile {
-        width: 65%;
+        width: 70%;
         display: flex;
-        // .image {
-        //     width: 100%;
-        // }
-        .contant {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            p {
-                margin: 0;
-            }
-            .name {
-                color: #ffffff;
-                font-weight: 600;
-                font-size: 16px;
-            }
-            .time {
-                font-size: 12px;
-                color: #ffffff;
-            }
-        }
     }
 }
