changes in search-ui

--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -666,6 +666,9 @@
     }
     .logo {
         display: none;
+        .logoChild {
+            display: none !important;
+        }
     }
     .menu-scroll {
         display: none !important;
