--- a/component/re-usabelComponent/search/groupCard/index.scss
+++ b/component/re-usabelComponent/search/groupCard/index.scss
@@ -1,12 +1,13 @@
 .group_card {
-    min-width: 232px;
-    margin-left: 10px;
+    // min-width: 232px;
+    // margin-left: 10px;
     .image {
         border: 3.5px solid #bfbfbf;
         border-radius: 10px;
         padding: 5px;
         display: flex;
         margin-bottom: 10px;
+        display: block;
     }
 
     .heading {
