--- a/component/re-usabelComponent/home/trending/trendingButton/index.scss
+++ b/component/re-usabelComponent/home/trending/trendingButton/index.scss
@@ -12,8 +12,8 @@
 
         margin-bottom: 8px;
         &:hover {
-            background: #f7f7f7;
-            transform: translateY(-0.25em);
+            background: #e6e6e6;
+            // transform: translateY(-0.25em);
             // -ms-transform: scale(1.1);
             // -webkit-transform: scale(1.1);
             // transform: scale(1.1);
