--- a/component/re-usabelComponent/notification/subNotification/index.scss
+++ b/component/re-usabelComponent/notification/subNotification/index.scss
@@ -1,6 +1,7 @@
 .subNotification {
     width: 100%;
-    border-top: 0.5px solid #c39eff;
+    border-top: 0.001em solid #eaeaea;
+
     .main_noti {
         display: flex;
         padding: 24px 0 0px 0;
