--- a/component/friendsList/index.scss
+++ b/component/friendsList/index.scss
@@ -1,6 +1,8 @@
 .friend_request_main {
     // margin: 40px 0 0 60px;
-    max-height: 100vh;
+    // max-height: 100vh;
+    // height: calc(100vh - 1px);
+    height: 100%;
     overflow: scroll;
     &::-webkit-scrollbar {
         display: none;
