--- a/component/nestedComponent/explore/exploreTab/search.scss
+++ b/component/nestedComponent/explore/exploreTab/search.scss
@@ -1,5 +1,6 @@
 .Search-main_page {
     max-height: 100vh;
+    // height: calc(100vh - 1px);
     // min-height: 100vh;
     // width: 100%;
     overflow: scroll;
