--- a/component/re-usabelComponent/common/avatar/index.scss
+++ b/component/re-usabelComponent/common/avatar/index.scss
@@ -16,6 +16,16 @@
     display: flex;
     justify-content: center;
 }
+.popOverAvater {
+    border: 3px solid #fe5e71;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    img {
+        width: 40px;
+        height: 40px;
+    }
+}
 .story {
     img {
         width: 40px;
