--- a/component/re-usabelComponent/profile/index.scss
+++ b/component/re-usabelComponent/profile/index.scss
@@ -36,7 +36,18 @@
                 font-size: 12px;
             }
         }
-
+        .popOver {
+            .user_name {
+                color: #1e293b;
+                font-weight: 600;
+                font-size: 10px;
+            }
+            p {
+                color: #bfbfbf;
+                font-weight: 400;
+                font-size: 9px;
+            }
+        }
         .homePostText {
             .user_name {
                 color: #1e293b;
@@ -57,52 +68,52 @@
     }
 }
 
-.ant-popover {
-    .ant-popover-title {
-        display: none;
-    }
-}
-.over {
-    .profile-main {
-        display: flex;
-        width: 100%;
-        // max-width: 580px;
-        // max-height: 60px;
-        justify-content: space-between;
-        // justify-content: center;
-        align-items: center;
-        padding-right: 22px;
-        // margin-bottom: 10px;
-        .profile-image {
-            display: flex;
-            .profile {
-                width: 40px;
-                height: 40px;
-                margin: 0px 10px;
-            }
+// .ant-popover {
+//     .ant-popover-title {
+//         display: none;
+//     }
+// }
+// .over {
+//     .profile-main {
+//         display: flex;
+//         width: 100%;
+//         // max-width: 580px;
+//         // max-height: 60px;
+//         justify-content: space-between;
+//         // justify-content: center;
+//         align-items: center;
+//         padding-right: 22px;
+//         // margin-bottom: 10px;
+//         .profile-image {
+//             display: flex;
+//             .profile {
+//                 width: 40px;
+//                 height: 40px;
+//                 margin: 0px 10px;
+//             }
 
-            .name {
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                .display {
-                    display: flex;
-                    width: 200%;
-                    .text {
-                        color: #010010;
-                        font-size: 10px;
-                    }
-                }
-                p {
-                    color: #010010;
-                    font-weight: 400;
-                    font-size: 9px;
-                    margin: 0;
-                }
-            }
-        }
-    }
-}
-.ant-popover {
-    top: 620px !important;
-}
+//             .name {
+//                 display: flex;
+//                 justify-content: center;
+//                 flex-direction: column;
+//                 .display {
+//                     display: flex;
+//                     width: 200%;
+//                     .text {
+//                         color: #010010;
+//                         font-size: 10px;
+//                     }
+//                 }
+//                 p {
+//                     color: #010010;
+//                     font-weight: 400;
+//                     font-size: 9px;
+//                     margin: 0;
+//                 }
+//             }
+//         }
+//     }
+// }
+// .ant-popover {
+//     top: 620px !important;
+// }
