--- a/component/setting/index.scss
+++ b/component/setting/index.scss
@@ -1,12 +1,11 @@
 .setting_main {
-    height: 100vh;
+    height: 100%;
     display: flex;
     // width: 100%;
     // justify-content: center;
     .left_side {
         width: 30%;
         // margin: 30px 20px 20px 20px;
-
         display: flex;
         background: #ffffff;
         box-shadow: 0px 0px 24px -10px rgba(0, 0, 0, 0.15);
