--- a/component/nestedComponent/search/tabs/index.scss
+++ b/component/nestedComponent/search/tabs/index.scss
@@ -2,7 +2,9 @@
     .ant-tabs {
         .ant-tabs-content-holder {
             overflow: auto;
-            max-height: 81vh;
+            // max-height: 70vh;
+            max-height: calc(100vh - 225px);
+
             &::-webkit-scrollbar {
                 display: none;
             }
