working on searc api

--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -493,7 +493,7 @@
     .widdeContainer {
         max-width: 1558px !important;
         display: block !important;
-        // margin-top: 15px !important;
+        margin-top: 15px !important;
     }
     .container {
         margin: 0 auto;
