--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -492,14 +492,13 @@
     // }
     .widdeContainer {
         max-width: 1558px !important;
-        display: block !important;
-        margin-top: 15px !important;
     }
     .container {
         margin: 0 auto;
         max-width: 1158px;
         display: flex;
         align-items: center;
+
         // justify-content: center;
         // min-height: 964px;
         // padding-top: 30px;
@@ -511,6 +510,7 @@
         .page {
             // width: 100wh;
             // padding: 50px 0px;
+            width: 100%;
             height: 97vh;
             border: 1px solid rgba(0, 0, 0, 0.07);
             border-radius: 20px;
