--- a/component/nestedComponent/home/storySlider/createStory/createStoryOption/index.scss
+++ b/component/nestedComponent/home/storySlider/createStory/createStoryOption/index.scss
@@ -4,6 +4,8 @@
         // justify-content: space-around;
         // padding: 0 5px 0 5px;
         .story {
+            // width: 100%;
+            // height: 100%;
             margin: 0 15px 20px 15px;
             cursor: pointer;
         }
