--- a/component/re-usabelComponent/trending/trendingPost/index.scss
+++ b/component/re-usabelComponent/trending/trendingPost/index.scss
@@ -1,6 +1,11 @@
 .trendingPost {
     border-bottom: 0.001em solid #eaeaea;
     margin-bottom: 20px;
+    padding: 10px 10px 10px 10px;
+    &:hover {
+        background: #e6e6e6;
+        border-radius: 20px;
+    }
     .small_head {
         font-weight: bold;
         font-size: 15px;
