--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -23,3 +23,5 @@
 @import "../search/tabs/eventOption";
 @import "../explore/exploreTab/popover";
 @import "../explore/exploreTab";
+@import "../home/floatingButton";
+@import "../home/floatingOption";
