--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -159,14 +159,15 @@
         }
 
         .ant-modal-body {
+            padding: 24px 15px 24px 24px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
             overflow: auto;
             max-height: 675px;
-            &::-webkit-scrollbar {
-                display: none;
-            }
+            // &::-webkit-scrollbar {
+            //     display: none;
+            // }
             .ant-input-affix-wrapper {
                 border-radius: 30px;
                 height: 50px;
