search ui bugs solve

--- a/component/re-usabelComponent/search/switch/index.scss
+++ b/component/re-usabelComponent/search/switch/index.scss
@@ -7,13 +7,13 @@
         color: #4f4f4f;
     }
     .ant-switch {
-        width: 37px;
-        height: 19px;
+        // width: 37px;
+        // height: 19px;
         background: rgba(223, 223, 223, 1);
-        .ant-switch-handle {
-            width: 14px;
-            height: 14px;
-        }
+        // .ant-switch-handle {
+        // width: 14px;
+        // height: 14px;
+        // }
     }
     .ant-switch-checked {
         background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%) !important;
