--- a/component/nestedComponent/search/tabs/eventOption/index.scss
+++ b/component/nestedComponent/search/tabs/eventOption/index.scss
@@ -3,5 +3,5 @@
     justify-content: center;
     width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.19);
-    padding-bottom: 20px;
+    padding: 5px 0 20px 0;
 }
