--- a/component/nestedComponent/search/tabs/index.scss
+++ b/component/nestedComponent/search/tabs/index.scss
@@ -18,6 +18,7 @@
             }
         }
         .ant-tabs-nav {
+            margin: 0;
             .ant-tabs-extra-content {
                 margin-right: 30px;
                 margin-bottom: 30px;
@@ -43,12 +44,12 @@
                 }
             }
             &::before {
-                border-color: rgba(0, 0, 0, 0.19);
+                border-bottom: 1px solid rgba(0, 0, 0, 0.19);
             }
             .ant-tabs-nav-wrap {
                 justify-content: center;
 
-                padding-bottom: 30px;
+                padding-bottom: 40px;
 
                 .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
                     color: unset;
