--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -15,6 +15,7 @@
 @import "../search/card/imageComponent/eventsIcon";
 @import "../search/switch";
 @import "../search/dropDown";
+@import "../search/select/";
 @import "../search/vedioCard";
 @import "../search/groupCard";
 @import "../common/spinner";
