--- a/component/re-usabelComponent/search/select/index.scss
+++ b/component/re-usabelComponent/search/select/index.scss
@@ -1,10 +1,48 @@
 // .ant-select .ant-select-single .ant-select-allow-clear .ant-select-show-arrow{
 
 // }
-.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
-    border-color: #f9445b !important;
-    box-shadow: none !important;
+.main_select {
+    .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector {
+        border-color: #f9445b !important;
+        box-shadow: none !important;
+    }
+    .ant-select-open {
+        .ant-select-selector {
+            // .ant-select-selection-search {
+            // }
+            .ant-select-selection-placeholder {
+                color: #bfbfbf !important;
+            }
+        }
+    }
+    .ant-select {
+        .ant-select-selector {
+            // .ant-select-selection-search {
+            // }
+            .ant-select-selection-placeholder {
+                color: black;
+            }
+            // .ant-select-selection-item {
+            // background-color: #bfbfbf;
+            // border-radius: 10px;
+            // }
+            &:hover {
+                border-color: red !important;
+            }
+        }
+        .ant-select-arrow {
+            color: black;
+        }
+        .ant-select-clear {
+            opacity: 1 !important;
+        }
+    }
 }
-.ant-select-clear {
-    opacity: 1 !important;
+.hello {
+    // .ant-select-item {
+    // }
+    .ant-select-item-option-active {
+        background-color: #bfbfbf;
+        border-radius: 10px;
+    }
 }
