--- a/component/re-usabelComponent/setting/commonChangeText/index.scss
+++ b/component/re-usabelComponent/setting/commonChangeText/index.scss
@@ -5,6 +5,7 @@
     .text {
         padding-left: 10px;
         .text_one {
+            color: #000;
             font-weight: 500;
             font-size: 16px;
             // line-height: 24px;
