--- a/component/re-usabelComponent/setting/commonHeading/index.scss
+++ b/component/re-usabelComponent/setting/commonHeading/index.scss
@@ -3,10 +3,11 @@
     .text {
         padding-left: 10px;
         .text_one {
+            color: #000;
             font-weight: 500;
-            font-size: 24px;
+            font-size: 26px;
             line-height: 24px;
-            // padding-left: 10px;
+            padding-left: 10px;
         }
         .text_two {
             color: #bfbfbf;
