working on post and reaction popup

--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -22,3 +22,5 @@
 @import "../common/avatar";
 @import "../profile";
 @import "../common/modal";
+@import "../home/homePostBottom";
+@import "../home/homeEventPost";
