--- a/component/re-usabelComponent/home/homeEventPost/index.scss
+++ b/component/re-usabelComponent/home/homeEventPost/index.scss
@@ -1,4 +1,4 @@
-.post-main {
+.event-main {
     // display: flex;
     // width: 100%;
     max-width: 580px;
@@ -48,11 +48,25 @@
     .post {
         margin-top: 30px;
         img {
-            border-radius: 20px !important;
+            border-radius: 20px 20px 0 0;
+            height: 300px;
         }
-        p {
-            margin-top: 10px;
+    }
+    .event_bottom {
+        background: #f8f8f8;
+        padding: 20px 20px 30px 20px;
+        border-radius: 0 0 20px 20px;
+        .heading {
+            font-weight: 500;
             font-size: 17px;
+            margin-top: 10px;
+            color: #1e293b;
+        }
+        .paragraph {
+            margin-top: 10px;
+            font-size: 15px;
+            font-weight: 300;
+            color: #1e293b;
         }
     }
     // .trend {
