--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -25,3 +25,4 @@
 @import "../explore/exploreTab";
 @import "../home/floatingButton";
 @import "../home/floatingOption";
+@import "../home//createPostTabs";
