working on create post tabs

--- a/component/nestedComponent/search/tabs/index.scss
+++ b/component/nestedComponent/search/tabs/index.scss
@@ -131,6 +131,13 @@
         }
     }
 }
+
+.Search_tabs_main {
+    .ant-tabs-nav::before {
+        border-bottom: none !important;
+    }
+}
+
 .Event {
     .ant-tabs-nav {
         &::before {
