--- a/component/re-usabelComponent/profile/index.scss
+++ b/component/re-usabelComponent/profile/index.scss
@@ -60,6 +60,18 @@
                 font-size: 12px;
             }
         }
+        .CreatePostColor {
+            .user_name {
+                color: #1e293b;
+                font-weight: 600;
+                font-size: 14px;
+            }
+            p {
+                color: #bfbfbf;
+                font-weight: 400;
+                font-size: 12px;
+            }
+        }
     }
     .dot {
         max-width: 30px;
