--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -24,3 +24,4 @@
 @import "../common/modal";
 @import "../home/homePostBottom";
 @import "../home/homeEventPost";
+@import "../home/commonCreatePost";
