--- a/component/re-usabelComponent/common/avatar/index.scss
+++ b/component/re-usabelComponent/common/avatar/index.scss
@@ -43,3 +43,9 @@
     filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.1));
     border-radius: 10px;
 }
+.CreatePostProfile {
+    img {
+        width: 70px;
+        height: 70px;
+    }
+}
