--- a/component/re-usabelComponent/common/modal/index.scss
+++ b/component/re-usabelComponent/common/modal/index.scss
@@ -1,7 +1,9 @@
 .common_modal {
-    width: 700px !important;
+    width: 1000px !important;
+
     // height: 740px !important;
     .ant-modal-content {
+        border-radius: 12px !important;
         // width: 100%;
         // height: 740px;
         // width: 100%;
