--- a/component/re-usabelComponent/home/commonCreatePost/index.scss
+++ b/component/re-usabelComponent/home/commonCreatePost/index.scss
@@ -1,11 +1,24 @@
 .Create_content {
     width: 100%;
     .background {
+        width: 100%;
         height: 300px;
+        background-repeat: no-repeat;
         padding: 10px 10px 10px 8px;
+        margin-bottom: 20px;
+        margin-top: 20px;
         p {
             color: #94a3b8;
             font-size: 20px;
         }
+    }
+    .back_image {
+        cursor: pointer;
+    }
+    .slick-slide {
+        width: 100px !important;
+    }
+    .POst_image_i {
+        margin-top: 30px;
     }
 }
