--- a/component/re-usabelComponent/home/commonCreatePost/index.scss
+++ b/component/re-usabelComponent/home/commonCreatePost/index.scss
@@ -1,24 +1,76 @@
 .Create_content {
     width: 100%;
-    .background {
-        width: 100%;
-        height: 300px;
-        background-repeat: no-repeat;
-        padding: 10px 10px 10px 8px;
-        margin-bottom: 20px;
-        margin-top: 20px;
-        p {
-            color: #94a3b8;
-            font-size: 20px;
+    .text_background {
+        position: relative;
+        .background {
+            width: 100%;
+            height: 340px;
+            // border-radius: 30px;
+            // background-repeat: no-repeat;
+            // padding: 10px 10px 10px 8px;
+            margin-bottom: 20px;
+            margin-top: 20px;
+            img {
+                border-radius: 30px;
+            }
         }
+        .text_color_grey {
+            .ant-input {
+                color: #94a3b8;
+
+                &::placeholder {
+                    color: #94a3b8;
+                }
+            }
+        }
+        .text_color_white {
+            display: flex;
+            align-items: center;
+            .ant-input {
+                color: #ffffff;
+                text-align: center;
+                &::placeholder {
+                    color: #ffffff;
+                    font-size: 30px;
+
+                    // vertical-align: middle;
+                }
+            }
+        }
+        .text_area {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 340px;
+            .ant-input {
+                background: none;
+                border: none;
+                box-shadow: none;
+                padding: 10px;
+                font-size: 25px;
+            }
+        }
+    }
+
+    .slick-slide {
+        width: 100px !important;
     }
     .back_image {
         cursor: pointer;
     }
-    .slick-slide {
-        width: 100px !important;
-    }
-    .POst_image_i {
-        margin-top: 30px;
+    .add_post {
+        height: 60px;
+        border: 1px solid #bfbfbf;
+        display: flex;
+        border-radius: 8px;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 20px 0 20px;
+        margin-top: 5px;
+        .text {
+            font-size: 18px;
+            font-weight: 500;
+            color: #000000;
+        }
     }
 }
