--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -102,7 +102,7 @@
         //     }
         // }
     }
-    .button_flot {
+    .button_float {
         position: absolute;
         bottom: 20px;
         right: 40%;
