--- a/component/nestedComponent/friendList/topBar/index.scss
+++ b/component/nestedComponent/friendList/topBar/index.scss
@@ -160,14 +160,19 @@
 
         .ant-modal-body {
             padding: 24px 15px 24px 24px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            overflow: auto;
-            max-height: 675px;
+
             // &::-webkit-scrollbar {
             //     display: none;
             // }
+            .scroll_div {
+                margin-top: 10px;
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                max-height: 590px;
+                overflow: auto;
+            }
             .ant-input-affix-wrapper {
                 border-radius: 30px;
                 height: 50px;
@@ -176,7 +181,7 @@
                 input {
                     background: #f7f7f7;
                     font-size: 16px;
-                    color: #bfbfbf;
+                    color: #010010;
                 }
             }
             .ant-input-affix-wrapper:focus,
