working on vedio upload and friend module search

--- a/component/re-usabelComponent/home/commonCreatePost/UploadOption/index.scss
+++ b/component/re-usabelComponent/home/commonCreatePost/UploadOption/index.scss
@@ -1,5 +1,6 @@
-// .upload_data {
-//     .ant-upload {
-
-//     }
-// }
+.upload_data {
+    .ant-upload {
+        border: unset !important;
+        background: unset !important;
+    }
+}
