working on uploads and event

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -26,3 +26,6 @@
 @import "../home/floatingButton";
 @import "../home/floatingOption";
 @import "../home//createPostTabs";
+@import "../home/createEvent";
+@import "../home/statusUpdate";
+@import "../home/steps";
