--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -25,4 +25,4 @@
 @import "../home/homePostBottom";
 @import "../home/homeEventPost";
 @import "../home/commonCreatePost";
-@import "../home/commonCreatePost/UploadOption";
+@import "../home/UploadOption";
