working on event

--- a/component/re-usabelComponent/scss/index.scss
+++ b/component/re-usabelComponent/scss/index.scss
@@ -26,3 +26,5 @@
 @import "../home/homeEventPost";
 @import "../home/commonCreatePost";
 @import "../home/UploadOption";
+@import "../common/button";
+@import "../home/eventData";
