--- a/component/nestedComponent/home/steps/index.scss
+++ b/component/nestedComponent/home/steps/index.scss
@@ -1,29 +1,74 @@
 .steps_main {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    .stepOne {
+    flex-direction: column;
+    align-items: center;
+    .steps_main_one {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        .round {
-            width: 39px;
-            height: 39px;
-            border: 1px solid red;
-            border-radius: 9px;
+        .main2 {
             display: flex;
-            justify-content: center;
             align-items: center;
+            .stepOne2 {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                .round {
+                    width: 39px;
+                    height: 39px;
+                    border: 1px solid red;
+                    border-radius: 9px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
         }
-        .vector {
-            width: 84px;
-            height: 1px;
-            background-color: #bfbfbf;
+        .color {
+            .round {
+                border: 1px solid red !important;
+            }
+            .vector {
+                background-color: red !important;
+            }
+        }
+        .main {
+            display: flex;
+            align-items: center;
+            // padding-right: 11px;
+            .stepOne {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                .round {
+                    width: 39px;
+                    height: 39px;
+                    border: 1px solid #bfbfbf;
+                    border-radius: 9px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+
+            .vector {
+                width: 100px;
+                height: 1px;
+                background-color: #bfbfbf;
+            }
         }
     }
-    .title {
-        text-align: end;
+    .steps_main_two {
+        display: flex;
+        width: 73%;
+        justify-content: space-between;
     }
-    .titletwo {
-        text-align: left;
+}
+.event_data {
+    width: 100%;
+    .bottom_next {
+        display: flex;
+        justify-content: flex-end;
     }
 }
