--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -1,33 +1,29 @@
 .next {
-    .ant-btn {
-        border-radius: 8px;
+    .btn {
+        margin-top: 20px;
         background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
-        color: #ffffff;
+
         width: 100px;
+        border-radius: 8px;
         border: none;
-        &:hover {
-            background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
-            color: #ffffff;
-        }
-        &:active {
-            background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
-            color: #ffffff;
-        }
     }
 }
+
 .back {
-    .ant-btn {
-        border-radius: 8px;
+    .btn {
+        margin-top: 20px;
         background: #e8e8e8;
-        color: #575757;
         width: 100px;
+        border-radius: 8px;
         border: none;
+
+        color: #575757;
         &:hover {
-            background: #e8e8e8;
+            background-color: #d9d9d9;
             color: #575757;
         }
-        &:active {
-            background: #e8e8e8;
+        &:focus {
+            background-color: #e8e8e8;
             color: #575757;
         }
     }
