--- a/component/re-usabelComponent/home/UploadOption/index.scss
+++ b/component/re-usabelComponent/home/UploadOption/index.scss
@@ -44,8 +44,16 @@
                 outline: none;
             }
         }
-        .react-audio-player {
-            outline: none;
+        // .react-audio-player {
+        //     outline: none;
+        // }
+        .hello {
+            width: 100%;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            background-size: cover;
+            justify-content: flex-end;
         }
     }
 }
