--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -30,3 +30,5 @@
 @import "../home/statusUpdate";
 @import "../home/steps";
 @import "../home/steps/eventDetailes";
+@import "../home/steps/Description";
+@import "../home/steps/Description";
