working on create-status-api and upload-image

--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -31,3 +31,14 @@
         background: #e8e8e8;
     }
 }
+
+.post {
+    .btn {
+        width: 100%;
+        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+        border-radius: 8px;
+        border: none;
+        margin-top: 20px;
+        height: 40px;
+    }
+}
