working on create-event-ui

--- a/component/nestedComponent/scss/index.scss
+++ b/component/nestedComponent/scss/index.scss
@@ -30,5 +30,8 @@
 @import "../home/statusUpdate";
 @import "../home/steps";
 @import "../home/steps/eventDetailes";
-@import "../home/steps/Description";
-@import "../home/steps/Description";
+@import "../home/steps/description";
+@import "../home/commonCreatePost";
+@import "../home/eventData";
+@import "../home/UploadOption";
+@import "../home/steps/preview";
