--- a/component/re-usabelComponent/common/button/index.scss
+++ b/component/re-usabelComponent/common/button/index.scss
@@ -42,3 +42,15 @@
         height: 40px;
     }
 }
+.event_button {
+    .btn {
+        background: linear-gradient(93.15deg, #c7539a -11.17%, #fb3e78 48.61%, #ff5369 96.45%);
+        border: none;
+        border-radius: 5px;
+        margin-left: 6px;
+        width: 100px;
+        height: 30px;
+        font-size: 14px;
+        padding: unset;
+    }
+}
