--- a/component/nestedComponent/home/steps/preview/index.scss
+++ b/component/nestedComponent/home/steps/preview/index.scss
@@ -1,37 +1,117 @@
-.event_image {
-    position: relative;
-    width: 100%;
-    height: 340px;
-    img {
-        border-radius: 20px 20px 0 0;
-    }
-}
-.footer {
-    width: 100%;
-    height: 85px;
-    background-size: cover;
-    border-radius: 0px 0px 20px 20px;
-    display: flex;
-    .calender {
-        width: 50%;
+.parent {
+    .event_image {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        .date {
-            p {
-                margin: unset;
+        align-items: flex-end;
+        width: 100%;
+        height: 440px;
+        border-radius: 20px 20px 20px 20px;
+        margin-top: 20px;
+        background-size: cover;
+    }
+    .footer {
+        width: 100%;
+        height: 85px;
+        background: rgba(255, 255, 255, 0.75);
+        backdrop-filter: blur(30px);
+        display: flex;
+        border-radius: 0 0 17px 17px;
+        .calender {
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .date {
+                margin-left: 10px;
+                p {
+                    margin: unset;
+                    font-size: 10px;
+                }
+            }
+        }
+        .button_site {
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    .about {
+        color: #010010;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+        padding: 3px;
+        margin-top: 20px;
+    }
+    .about_details {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 40px;
+        .left_site {
+            width: 48%;
+            border: 1px dashed #bfbfbf;
+            border-radius: 20px;
+            padding: 40px;
+            .detail_heading {
+                font-weight: 500;
+                font-size: 20px;
+                color: #010010;
+                margin-left: 20px;
+            }
+            .flex {
+                display: flex;
+                align-items: center;
+                margin-top: 12px;
+                p {
+                    margin: 0;
+                    margin-left: 10px;
+                }
+            }
+        }
+        .right_site {
+            width: 48%;
+            // display: flex;
+            border: 1px dashed #bfbfbf;
+            border-radius: 20px;
+            padding: 40px;
+            .detail_heading {
+                font-weight: 500;
+                font-size: 20px;
+                color: #010010;
+                margin-left: 20px;
+            }
+            .guest_site {
+                display: flex;
+                justify-content: space-around;
+                .flex_two {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
             }
         }
     }
-    .button_site {
-        width: 50%;
+    .map {
+        width: 100%;
+        height: 255px;
+        background-size: cover;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        align-items: flex-end;
+        border-radius: 20px;
+        margin-top: 30px;
+        .map_footer {
+            width: 100%;
+            height: 65px;
+            background: rgba(255, 255, 255, 0.75);
+            backdrop-filter: blur(30px);
+            display: flex;
+            border-radius: 0 0 17px 17px;
+            p {
+                margin-left: 50px;
+                margin-top: 20px;
+                color: #212121;
+                font-size: 17px;
+            }
+        }
     }
-}
-.about {
-    color: #010010;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-    padding: 3px;
 }
